<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#333333">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textColor="#FFFFFF"
            android:paddingBottom="4dp"/>

        <EditText
            android:id="@+id/eventTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Ex: Party"
            android:background="@drawable/rounded_background"
            android:textColor="#FFFFFF"
            android:padding="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Emotional State"
            android:textColor="#FFFFFF"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"/>

        <Spinner
            android:id="@+id/emotionalStateSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/spinner_rounded_background_with_arrow"
            android:textColor="#FFFFFF"
            android:padding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reason"
            android:textColor="#FFFFFF"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"/>

        <EditText
            android:id="@+id/reasonEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Ex: Birthday"
            android:background="@drawable/rounded_background"
            android:textColor="#FFFFFF"
            android:padding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trigger"
            android:textColor="#FFFFFF"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"/>

        <EditText
            android:id="@+id/triggerEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_background"
            android:hint="Optional"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Social Situation (optional)"
            android:textColor="#FFFFFF"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"/>

        <Spinner
            android:id="@+id/socialSituationSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/spinner_rounded_background_with_arrow"
            android:textColor="#FFFFFF"
            android:padding="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FFFFFF"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"/>

        <CheckBox
            android:id="@+id/locationCheckbox"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:buttonTint="#4CAF50"
            android:text="Include Location"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Mood"
            android:textColor="#FFFFFF"
            android:backgroundTint="#f97070"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
