...
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/sentio_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/follow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="Follow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follower_stats"
            app:layout_constraintVertical_bias="0.045" />

...
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_username">

            <LinearLayout
                android:id="@+id/followers_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
...
                    android:text="Followers"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/following_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
...
